syntax = "proto3";  
option csharp_namespace = "CTrue.FsTrackLog.Proto";

message FsTrackLogFileHeader
{
	int32 Version = 1;
}