syntax = "proto3";  
option csharp_namespace = "CTrue.FsTrackLog.Proto.v1";

message FsTrackPoint  
{  
	int64 Time = 1;  
	double Latitude = 2;  
	double Longitude = 3;  
	double Altitude = 4;
	double AltitudeAboveGround = 5;
	double Heading = 6;
	double Speed = 7;
}